--- a/insta/templates/home.html
+++ b/insta/templates/home.html
@@ -5,10 +5,42 @@
 
 
 {% block styles %}
-<link rel="stylesheet" href="{% static 'css/main.css' %}">  
+<link rel="stylesheet" href="{% static 'css/home.css' %}">  
 {% endblock  %}
   
 
 {% block content %} 
-<h1>Hi. Bern</h1>
+<div class="container">
+<h2 class="font-weight-bold">Hello, {{ request.user.username}}...</h2>
+<p class="lead"><a href="">Add a post...</a></p>
+<div class="row">
+    {% for post in posts %}
+    <div class="col-md-9">
+        <div class="card mb-3">
+            <div class="card-header">
+                <div class="avatar">
+                    <img class="img-fluid rounded-circle" src="{{ post.user.profile_picture.url }}">
+                </div>
+                <div class="name lead"><strong><span style="font-size: 20px;">  {{ post.user.user }}</span></strong> <br>  <small><span class="text-muted">{{ post.date| timesince }} ago...</span></small></div>
+            </div>
+            <div class="card-content p-4">
+                <h4 style="font-weight: bold;">{{ post.name }}</h4>
+                <p>{{ post.caption }}</p>
+            </div>
+            <div class="card-content">
+                <img src="{{ post.image.url }}">
+            </div>
+            
+            <div class="card-footer">
+                <a href="" class="btn btn-sm btn-outline-success">Reply</a>
+                <a href="{% url 'singlePost' post.id %}" class="btn btn-sm btn-outline-success">View Post</a>
+            </div>
+        </div>
+        <br>
+    </div>
+    {% endfor %}
+    <br>
+</div>
+</div>
+
 {% endblock  %}
