--- a/insta/templates/registration/login.html
+++ b/insta/templates/registration/login.html
@@ -1,41 +1,80 @@
-{%extends "base.html"%}
 {% load bootstrap4 %}
-{% block content %}
-<div class="container">
-  <div class="row">
-    <!-- Empty div -->
-    <div class="col-md-4"></div>
-    <div class="col-md-4">
-      {% if form.errors %}
-        <p> Your Password or Username is incorrect </p>
-      {% endif %}
-      <div class="panel panel-default">
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
 
-        <div class="panel-heading">
-          <h3 class="text-center">Sign In</h3>
+  <title>Accounts</title>
+ 
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+    <!-- Google Fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Material Design Bootstrap -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
+
+</head>
+<body>
+  {% include "navbar.html" %}
+
+  <div class="container mt-3">
+    <div class="row">
+      <!-- Empty div -->
+      <div class="col-md-4"></div>
+      <div class="col-md-4">
+        {% if form.errors %}
+          <p> Password or Username is incorrect </p>
+        {% endif %}
+        <div class="panel panel-default">
+  
+          <div class="panel-heading">
+            <h3 class="text-center">Sign In</h3>
+          </div>
+          <div class="panel-body">
+  
+            <form  action="/accounts/login/" method="post">
+              {% csrf_token %}
+              {{ form.as_p }}
+  
+              <div class="form-group">
+                <input type="submit" class="btn btn-primary btn-sm" value="Login">
+              </div>
+  
+              <input type="hidden" name="next" value="{{next}}">
+  
+            </form>
+  
+          </div>
+  
         </div>
-        <div class="panel-body">
+  
+      </div>
+      <!-- empty div -->
+      <div class="col-md-4">
+      </div>
+    </div>
 
-          <form  action="/accounts/login/" method="post">
-            {% csrf_token %}
-            {% bootstrap_form form%}
-
-            <div class="form-group">
-              <input type="submit" class="btn btn-primary btn-sm" value="Login">
-            </div>
-
-            <input type="hidden" name="next" value="{{next}}">
-
-          </form>
-
-        </div>
+    <div class="row">
+      <!-- Empty div -->
+      <div class="col-md-4"></div>
+      <div class="col-md-4">
+        <p class=""><a href="/accounts/register">Or create an account...</a></p>
 
       </div>
-
-    </div>
-    <!-- empty div -->
-    <div class="col-md-4"></div>
+      <div class="col-md-4"></div>
   </div>
 </div>
+  
 
-{% endblock %}
+    <!-- JQuery -->
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <!-- Bootstrap tooltips -->
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+        <!-- Bootstrap core JavaScript -->
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+        <!-- MDB core JavaScript -->
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
+</body>
+</html>
